Fix order id truncate and add loading state and no orders sate msg

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,7 +127,7 @@
   max-width: 100%;
 
   /* truncate between 650px and 1100px */
-  @media (min-width: 640px) and (max-width: 1100px) {
+  @media (min-width: 600px) and (max-width: 1050px) {
     white-space: nowrap;
     max-width: 220px;
     overflow: hidden;
